--- a/New folder (4)/index.html
+++ b/New folder (4)/index.html
@@ -27,7 +27,7 @@
     <h3>Upcoming Events</h3>
     <div class="card-container">
       <div class="card">
-        <img src="images/event1.jpg" alt="Event">
+        <img src="my 1-school.jpg.jpg" alt="Event">
         <h4>Tech Symposium</h4>
         <p>Join the innovation wave!</p>
       </div>
