--- a/New folder (4)/clubs.html
+++ b/New folder (4)/clubs.html
@@ -1,21 +1,79 @@
-<!-- clubs.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>EventHive - Clubs</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Our Clubs | EventHive</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header> ... </header>
+  <div class="club-page-container">
+    <h1>Join a Club, Fuel Your Passion 🔥</h1>
+    <p>Explore our vibrant student clubs. Meet new people. Build amazing things. Be part of something bigger!</p>
 
-  <section class="clubs-section">
-    <h2>Explore Clubs</h2>
-    <div class="card-container">
-      <!-- Club Cards -->
+    <div class="clubs-grid">
+      <!-- Photography Club -->
+      <div class="club-card">photography,
+        <img src="my 7-photo.jpg.jpeg" alt="Photography Club">
+        <h3>Photography Club</h3>camera
+        <p>Capture moments that last forever. Workshops, photo walks, editing sessions & competitions.</p>
+        <a href="join-club.html">
+        <button class="join-btn">Join club</button>
+        </a>
+      </div>
+
+      <!-- Coding Club -->
+      <div class="club-card">
+        <img src="my 7-code.jpg.jpeg" alt="Coding Club">
+        <h3>Coding Club</h3>
+        <p>Code. Debug. Build. Compete. Join the community of future developers and innovators.</p>
+        <a href="join-club.html">
+        <button class="join-btn">Join Club</button>
+        </a>
+      </div>
+
+      <!-- Music Club -->
+      <div class="club-card">
+        <img src="my 7-music.jpg.jpeg" alt="Music Club">
+        <h3>Music Club</h3>
+        <p>Where melodies meet talent. Join jam sessions, learn instruments, and perform live!</p>
+        <a href="join-club.html">
+        <button class="join-btn">Join Club</button>
+        </a>
+      </div>
+      <!-- Cricket Club -->
+<div class="club-card">
+  <img src="my 7-creket.jpg.jpeg" alt="Cricket Club">
+  <h3>Cricket Club</h3>
+  <p>Step onto the pitch! Practice, tournaments, fitness, and unbeatable team spirit await you.</p>
+  <a href="join-club.html">
+  <button class="join-btn">Join Club</button>
+  </a>
+</div>
+
+<!-- Polo Club -->
+<div class="club-card">
+  <img src="my 7-polo.jpg.jpeg" alt="Polo Club">
+  <h3>Polo Club</h3>
+  <p>Experience the thrill of horse-riding and strategy. Learn, ride, and compete with elegance and skill.</p>
+  <a href="join-club.html">
+  <button class="join-btn">Join Club</button>
+  </a>
+</div>
+
+
+      <!-- Dance Club -->
+      <div class="club-card">
+        <img src="my 7-dance.jpg.jpeg" alt="Dance Club">
+        <h3>Dance Club</h3>
+        <p>Groove to the rhythm. From classical to hip-hop, dance with energy and passion.</p>
+        <a href="join-club.html">
+        <button class="join-btn">Join Club</button>
+        </a>
+      </div>
     </div>
-  </section>
+  </div>
 
-  <footer> ... </footer>
 </body>
 </html>
+
