--- a/New folder (4)/events.html
+++ b/New folder (4)/events.html
@@ -96,28 +96,63 @@
     </div>
   </section>
 
-  <section class="card-container">
-    <div class="card">
-      <img src="my 2-hack.jpg.jpg" alt="Tech Event">
-      <h3>Hackathon 2025</h3>
-      <p>Organized by Tech Club<br>📅 June 5 | 📍 Main Hall</p>
-      <a href="event-detail.html" class="btn">Register Now</a>
-    </div>
+<section class="card-container">
+  <div class="card">
+    <img src="my 2-hack.jpg.jpg" alt="Tech Event">
+    <h3>Hackathon 2025</h3>
+    <p>Organized by Tech Club<br>📅 June 5 | 📍 Main Hall</p>
+    <a href="event-detail.html" class="btn">Register Now</a>
+  </div>
 
-    <div class="card">
-      <img src="my 5-hack.jpg.jpg" alt="Cultural Event">
-      <h3>Fusion Fiesta</h3>
-      <p>Organized by Culture Club<br>📅 June 10 | 📍 Open Stage</p>
-      <a href="event-detail.html" class="btn">Register Now</a>
-    </div>
+  <div class="card">
+    <img src="my 2-dance.jpg.jpeg" alt="Cultural Event">
+    <h3>Fusion Fiesta</h3>
+    <p>Organized by Culture Club<br>📅 June 10 | 📍 Open Stage</p>
+    <a href="event-detail.html" class="btn">Register Now</a>
+  </div>
 
-    <div class="card">
-      <img src="my 4-hack.jpg.jpg" alt="Sports Event">
-      <h3>Intercollege Football</h3>
-      <p>Organized by Sports Club<br>📅 June 15 | 📍 Sports Ground</p>
-      <a href="event-detail.html" class="btn">Register Now</a>
-    </div>
-    
+  <div class="card">
+    <img src="my 2-football.jpg.jpeg" alt="Sports Event">
+    <h3>Intercollege Football</h3>
+    <p>Organized by Sports Club<br>📅 June 15 | 📍 Sports Ground</p>
+    <a href="event-detail.html" class="btn">Register Now</a>
+  </div>
+
+  <div class="card">
+    <img src="my 2-hack.jpg.jpg" alt="Workshop Event">
+    <h3>AI Workshop</h3>
+    <p>Organized by Tech Club<br>📅 June 20 | 📍 Lab 3</p>
+    <a href="event-detail.html" class="btn">Register Now</a>
+  </div>
+
+  <div class="card">
+    <img src="my 2-music.jpg.jpeg" alt="Music Event">
+    <h3>Battle of Bands</h3>
+    <p>Organized by Music Club<br>📅 June 22 | 📍 Auditorium</p>
+    <a href="event-detail.html" class="btn">Register Now</a>
+  </div>
+
+  <div class="card">
+    <img src="my 2-V.S..jpg.jpeg" alt="Debate Event">
+    <h3>Interclub Debate</h3>
+    <p>Organized by Debate Club<br>📅 June 25 | 📍 Conference Room</p>
+    <a href="event-detail.html" class="btn">Register Now</a>
+  </div>
+
+  <div class="card">
+    <img src="my 2-ART.jpg.jpeg" alt="Art Event">
+    <h3>Art Exhibition</h3>
+    <p>Organized by Art Club<br>📅 June 28 | 📍 Gallery Hall</p>
+    <a href="event-detail.html" class="btn">Register Now</a>
+  </div>
+
+  <div class="card">
+    <img src="my 2-charytyjpg.png" alt="Charity Event">
+    <h3>Charity Run</h3>
+    <p>Organized by Social Service Club<br>📅 July 1 | 📍 Campus Grounds</p>
+    <a href="event-detail.html" class="btn">Register Now</a>
+  </div>
+</section>
 
     <!-- Add more event cards -->
   </section>
