--- a/New folder (4)/gallery.html
+++ b/New folder (4)/gallery.html
@@ -1,4 +1,3 @@
-<!-- gallery.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,17 +6,37 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header> ... </header>
+  <header>
+    <h1>🐝 EventHive</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="events.html">Events</a>
+      <a href="clubs.html">Clubs</a>
+      <a href="gallery.html" class="active">Gallery</a>
+      <a href="announcements.html">News</a>
+      <a href="feedback.html">Feedback</a>
+    </nav>
+  </header>
 
   <section class="gallery">
-    <h2>Event Highlights</h2>
+    <h2>📸 Event Highlights</h2>
     <div class="gallery-grid">
-      <img src="images/gallery1.jpg" alt="">
-      <img src="images/gallery2.jpg" alt="">
-      <!-- More images -->
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ40bVCwpXDazwpyPZWlsobONmcCi8R1PrrWA&s,concert" alt="Event 1">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvL8KnEdIemiK4bUhR6HwHXf6Eo3BXXHsqHg&s,celebration" alt="Event 2">
+      <img src="https://d3lzcn6mbbadaf.cloudfront.net/media/details/ANI-20230504064447_4I14SDp.jpg,culture" alt="Event 3">
+      <img src="https://cdn.asp.events/CLIENT_Synergy__560AF404_5056_B739_54C920F16E9738F6/sites/Powergen-India-2019/media/Slider-6.1.jpg,football" alt="Event 4">
+      <img src=",dance" alt="Event 5">
+      <img src=",festival" alt="Event 6">
+      <img src=",tech" alt="Event 7">
+      <img src=",band" alt="Event 8">
+      <img src=",students" alt="Event 9">
+      <img src=",event" alt="Event 10">
     </div>
   </section>
 
-  <footer> ... </footer>
+  <footer>
+    <p>© 2025 EventHive</p>
+  </footer>
 </body>
 </html>
+
