--- a/New folder (4)/history.html
+++ b/New folder (4)/history.html
@@ -4,14 +4,67 @@
   <meta charset="UTF-8">
   <title>My Registrations - EventHive</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Page-specific quick style */
+    .history {
+      max-width: 800px;
+      margin: 3rem auto;
+      background-color: #fff;
+      padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.08);
+    }
+
+    .history h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+      color: #222;
+    }
+
+    .history ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .history li {
+      background: #f9f9f9;
+      border-left: 6px solid #ffcc00;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      border-radius: 8px;
+      font-size: 1.05rem;
+      color: #333;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    .history li::before {
+      content: '✔️';
+      font-size: 1.2rem;
+      margin-right: 0.5rem;
+    }
+  </style>
 </head>
 <body>
-  <!-- Include Header Here -->
+
+  <!-- You can include your navbar here if you have one -->
+  <header>
+    <h1 style="text-align: center;">EventHive – My Registrations</h1>
+  </header>
 
   <section class="history">
     <h2>My Registered Events</h2>
     <ul>
-      <li>✔️ Hackathon 2025 - Registered</li>
-      <li>
-::contentReference[oaicite:26]{index=26}
+      <li>Hackathon 2025 – Registered</li>
+      <li>Photography Workshop – Confirmed</li>
+      <li>Web Design Bootcamp – Registered</li>
+      <li>Music Fest 2025 – Pending Approval</li>
+    </ul>
+  </section>
+
+</body>
+</html>
+
  
